--- a/1/EomTool/EomApp1/EomApp1.csproj
+++ b/1/EomTool/EomApp1/EomApp1.csproj
@@ -64,7 +64,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>EomApp1.Program</StartupObject>
@@ -906,7 +906,6 @@
     <None Include="DirectTrackDataSet.xss">
       <DependentUpon>DirectTrackDataSet.xsd</DependentUpon>
     </None>
-    <None Include="EomApp1_TemporaryKey.pfx" />
     <None Include="Formss\AB\Data\DAMain1DataSet.xsc">
       <DependentUpon>DAMain1DataSet.xsd</DependentUpon>
     </None>
