--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -80,7 +80,7 @@
       providerName="System.Data.EntityClient" />
     <add name="CakeEntities" connectionString="metadata=res://*/Formss.Synch.Models.Cake.CakeStaging.csdl|res://*/Formss.Synch.Models.Cake.CakeStaging.ssdl|res://*/Formss.Synch.Models.Cake.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="EomDatabaseEntities" connectionString="metadata=res://*/Formss.Synch.Models.Eom.EomModel.csdl|res://*/Formss.Synch.Models.Eom.EomModel.ssdl|res://*/Formss.Synch.Models.Eom.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=zTestMay2012;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
+    <add name="EomDatabaseEntities" connectionString="metadata=res://*/Formss.Synch.Models.Eom.EomModel.csdl|res://*/Formss.Synch.Models.Eom.EomModel.ssdl|res://*/Formss.Synch.Models.Eom.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=DADatabaseJune2012;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
   </connectionStrings>
   <userSettings>
