--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -82,6 +82,8 @@
       providerName="System.Data.EntityClient" />
     <add name="EomDatabaseEntities" connectionString="metadata=res://*/Formss.Synch.Models.Eom.EomModel.csdl|res://*/Formss.Synch.Models.Eom.EomModel.ssdl|res://*/Formss.Synch.Models.Eom.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=zTestMay2012;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
+    <add name="EomApp1.Properties.Settings.DAConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=DA;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <userSettings>
     <EomApp1.Properties.Settings>
@@ -199,9 +201,6 @@
     <EomApp1.Properties.Settings>
       <setting name="EomApp1_CakeService_Service" serializeAs="String">
         <value>http://localhost:61333/Service.asmx</value>
-      </setting>
-      <setting name="DADatabaseMasterListConnectionString" serializeAs="String">
-        <value>Data Source=biz2\da;Initial Catalog=DA;Integrated Security=True</value>
       </setting>
     </EomApp1.Properties.Settings>
   </applicationSettings>
