--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -105,5 +105,15 @@
     <Setting Name="SynchScreenTargetSystemChoice" Type="EomApp1.Screens.Synch.TargetSystemChoice" Scope="User">
       <Value Profile="(Default)">DirectTrack</Value>
     </Setting>
+    <Setting Name="OverrideConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=zDADatabaseKevin;Integrated Security=True&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseKevin;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="OverrideDate" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">2012-06-01</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
