--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -5,6 +5,9 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="EomApp1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="EomApp1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <dataConfiguration defaultDatabase="DADatabaseR1Entities" />
   <connectionStrings>
@@ -108,9 +111,6 @@
       <setting name="SynchScreenTargetSystemChoice" serializeAs="String">
         <value>DirectTrack</value>
       </setting>
-      <setting name="OverrideDate" serializeAs="String">
-        <value>2012-06-01</value>
-      </setting>
     </EomApp1.Properties.Settings>
   </userSettings>
   <system.serviceModel>
@@ -204,4 +204,14 @@
       <endpoint address="http://login.directagents.com/api/1/get.asmx" binding="basicHttpBinding" bindingConfiguration="getSoap" contract="WebServices.V1.getSoap" name="getSoap" />
     </client>
   </system.serviceModel>
+  <applicationSettings>
+    <EomApp1.Properties.Settings>
+      <setting name="OverrideDate" serializeAs="String">
+        <value>2012-06-01</value>
+      </setting>
+      <setting name="TestUserIdentities" serializeAs="String">
+        <value>directagents\aanodide,directagents\kslesinsky</value>
+      </setting>
+    </EomApp1.Properties.Settings>
+  </applicationSettings>
 </configuration>
