--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -112,8 +112,11 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseKevin;Integrated Security=True</Value>
     </Setting>
-    <Setting Name="OverrideDate" Type="System.DateTime" Scope="User">
+    <Setting Name="OverrideDate" Type="System.DateTime" Scope="Application">
       <Value Profile="(Default)">2012-06-01</Value>
+    </Setting>
+    <Setting Name="TestUserIdentities" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">directagents\aanodide,directagents\kslesinsky</Value>
     </Setting>
   </Settings>
 </SettingsFile>
