fixed order of names in db selection, updated db proj with jun/jul changes

--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -118,5 +118,8 @@
     <Setting Name="TestUserIdentities" Type="System.String" Scope="Application">
       <Value Profile="(Default)">directagents\aanodide,directagents\kslesinsky</Value>
     </Setting>
+    <Setting Name="TestMode" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
