--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -212,6 +212,9 @@
       <setting name="TestUserIdentities" serializeAs="String">
         <value>directagents\aanodide,directagents\kslesinsky</value>
       </setting>
+      <setting name="TestMode" serializeAs="String">
+        <value>False</value>
+      </setting>
     </EomApp1.Properties.Settings>
   </applicationSettings>
 </configuration>
