docs and shared test settings

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -83,7 +83,7 @@
     <add name="EomDatabaseEntities" connectionString="metadata=res://*/Screens.Synch.Models.Eom.EomModel.csdl|res://*/Screens.Synch.Models.Eom.EomModel.ssdl|res://*/Screens.Synch.Models.Eom.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=DADatabaseJune2012;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="EomApp1.Properties.Settings.OverrideConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseKevin;Integrated Security=True" />
+      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test;Integrated Security=True" />
   </connectionStrings>
   <userSettings>
     <EomApp1.Properties.Settings>
@@ -207,13 +207,13 @@
   <applicationSettings>
     <EomApp1.Properties.Settings>
       <setting name="OverrideDate" serializeAs="String">
-        <value>2012-06-01</value>
+        <value>2012-07-01</value>
       </setting>
       <setting name="TestUserIdentities" serializeAs="String">
         <value>directagents\aanodide,directagents\kslesinsky</value>
       </setting>
       <setting name="TestMode" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
     </EomApp1.Properties.Settings>
   </applicationSettings>
