--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -216,7 +216,7 @@
         <value>directagents\aanodide,directagents\kslesinsky</value>
       </setting>
       <setting name="TestMode" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </EomApp1.Properties.Settings>
   </applicationSettings>
